--- a/src/layouts/MainLayouts.astro
+++ b/src/layouts/MainLayouts.astro
@@ -1,18 +1,17 @@
 ---
 import Navbar from "../components/sections/navbar.astro";
 import Footer from "../components/sections/footer.astro";
-import tailwind from "../styles/global.css";
 import { ViewTransitions } from 'astro:transitions';
 ---
 
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo_hayproject.jpeg" />
     <link rel="stylesheet" href="/styles/global.css" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <link rel="stylesheet" href={tailwind} />
+    <link rel="stylesheet" href="/styles/global.css" />
     <ViewTransitions />
     <title>HayProject</title>
   </head>
