--- a/src/components/sections/navbar.astro
+++ b/src/components/sections/navbar.astro
@@ -5,8 +5,8 @@ export let links = [
   { name: "Home", path: "#home" },
   { name: "About", path: "#about" },
   { name: "Skills", path: "#skills" },
-  { name: "Project", path: "/project" },
-  { name: "Contact", path: "/contact" },
+  { name: "Project", path: "#projects" },
+  { name: "Contact", path: "#contacts" },
 ];
 ---
 
@@ -17,7 +17,7 @@ export let links = [
       <div class="flex shrink-0">
         <a aria-current="page" class="flex items-center" href="/">
           <img
-            class="h-7 w-auto"
+            class="h-7 w-auto border-circle border-2 rounded-full"
             src="/logo_hayproject.jpeg"
             alt="HayProject"
           />
