--- a/src/pages/home.astro
+++ b/src/pages/home.astro
@@ -3,9 +3,9 @@ export let title = "home";
 ---
 
 <section
-  class="py-8 sm:py-16 md:py-24 flex items-center justify-center"
+  class="py-8 sm:py-16 md:py-24 flex items-center justify-center bg-[url('/bg-hayproject.webp')] bg-cover bg-center bg-no-repeat h-screen"
   id="home">
-  <div class="mx-auto max-w-[43rem]">
+  <div class="mx-auto max-w-[43rem] py-8 bg-white bg-opacity-80 backdrop-blur-sm rounded-lg shadow-lg px-6 sm:px-8 md:px-10 lg:px-12">
     <div class="text-center">
       <p class="text-lg font-medium leading-8 text-gray-500">Welcome to</p>
       <h1
