--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,10 +3,14 @@ import MainLayouts from "../layouts/MainLayouts.astro";
 import Home from "./home.astro";
 import About from "./about.astro";
 import Skills from "./skills.astro";
+import Projects from "./projects.astro";
+import Contacts from "./contacts.astro";
 ---
 
 <MainLayouts>
   <Home />
   <About />
   <Skills />
+  <Projects />
+  <Contacts />
 </MainLayouts>
