ëdit section contacts

--- a/src/pages/home.astro
+++ b/src/pages/home.astro
@@ -19,10 +19,11 @@ export let title = "home";
       </p>
     </div>
     <div class="mt-6 flex items-center justify-center gap-4">
-      <button
+      <a
+        href="#projects"
         class="inline-block px-6 py-2.5 bg-blue-500 text-white font-medium text-xl leading-tight hover:bg-blue-600 cursor-pointer hover:shadow-sm focus:bg-blue-600 focus:shadow-sm focus:outline-none focus:ring-0 active:bg-blue-700 active:shadow-sm disabled:opacity-25 transition duration-150 disabled:pointer-events-none ease-in-out">
         Project
-      </button>
+      </a>
     </div>
   </div>
 </section>
