--- a/src/pages/skills.astro
+++ b/src/pages/skills.astro
@@ -8,55 +8,61 @@ export let title = "Skills";
     <div class="flex flex-wrap justify-center -m-4 text-center">
       <div class="p-4 md:w-1/4 sm:w-1/2 w-full">
         <div class="h-64 w-full flex flex-col items-center justify-center border-2 border-gray-600 p-4 rounded-lg transform transition duration-500 hover:scale-105 bg-white">
-          <img src="/html.png" alt="" srcset="" class="w-40 h-40 object-contain mb-4">
+          <img src="/html.png" alt="HTML" srcset="" class="w-40 h-40 object-contain mb-4">
           <h2 class="title-font font-medium text-3xl text-gray-900">HTML</h2>
         </div>
       </div>
       <div class="p-4 md:w-1/4 sm:w-1/2 w-full">
         <div class="h-64 w-full flex flex-col items-center justify-center border-2 border-gray-600 p-4 rounded-lg transform transition duration-500 hover:scale-105 bg-white">
-          <img src="/css.png" alt="" srcset="" class="w-40 h-40 object-contain mb-4">
+          <img src="/css.png" alt="CSS" srcset="" class="w-40 h-40 object-contain mb-4">
           <h2 class="title-font font-medium text-3xl text-gray-900">CSS</h2>
         </div>
       </div>
       <div class="p-4 md:w-1/4 sm:w-1/2 w-full">
         <div class="h-64 w-full flex flex-col items-center justify-center border-2 border-gray-600 p-4 rounded-lg transform transition duration-500 hover:scale-105 bg-white">
-          <img src="/Bootstrap.png" alt="" srcset="" class="w-40 h-40 object-contain mb-4">
+          <img src="/Bootstrap.png" alt="Bootstrap" srcset="" class="w-40 h-40 object-contain mb-4">
           <h2 class="title-font font-medium text-3xl text-gray-900">Bootstrap</h2>
         </div>
       </div>
       <div class="p-4 md:w-1/4 sm:w-1/2 w-full">
         <div class="h-64 w-full flex flex-col items-center justify-center border-2 border-gray-600 p-4 rounded-lg transform transition duration-500 hover:scale-105 bg-white">
-          <img src="/javascript.png" alt="" srcset="" class="w-40 h-40 object-contain mb-4">
+          <img src="/tailwindcss.svg" alt="Tailwind CSS" srcset="" class="w-40 h-40 object-contain mb-4">
+          <h2 class="title-font font-medium text-3xl text-gray-900">Tailwind CSS</h2>
+        </div>
+      </div>
+      <div class="p-4 md:w-1/4 sm:w-1/2 w-full">
+        <div class="h-64 w-full flex flex-col items-center justify-center border-2 border-gray-600 p-4 rounded-lg transform transition duration-500 hover:scale-105 bg-white">
+          <img src="/javascript.png" alt="JavaScript" srcset="" class="w-40 h-40 object-contain mb-4">
           <h2 class="title-font font-medium text-3xl text-gray-900">JavaScript</h2>
         </div>
       </div>
       <div class="p-4 md:w-1/4 sm:w-1/2 w-full">
         <div class="h-64 w-full flex flex-col items-center justify-center border-2 border-gray-600 p-4 rounded-lg transform transition duration-500 hover:scale-105 bg-white">
-          <img src="/express-js.png" alt="" srcset="" class="w-40 h-40 object-contain mb-4">
+          <img src="/express-js.png" alt="Express JS" srcset="" class="w-40 h-40 object-contain mb-4">
           <h2 class="title-font font-medium text-3xl text-gray-900">Express JS</h2>
         </div>
       </div>
       <div class="p-4 md:w-1/4 sm:w-1/2 w-full">
         <div class="h-64 w-full flex flex-col items-center justify-center border-2 border-gray-600 p-4 rounded-lg transform transition duration-500 hover:scale-105 bg-white">
-          <img src="/prisma.png" alt="" srcset="" class="w-40 h-40 object-contain mb-4">
+          <img src="/prisma.png" alt="Prisma" srcset="" class="w-40 h-40 object-contain mb-4">
           <h2 class="title-font font-medium text-3xl text-gray-900">Prisma</h2>
         </div>
       </div>
       <div class="p-4 md:w-1/4 sm:w-1/2 w-full">
         <div class="h-64 w-full flex flex-col items-center justify-center border-2 border-gray-600 p-4 rounded-lg transform transition duration-500 hover:scale-105 bg-white">
-          <img src="/laravel.png" alt="" srcset="" class="w-40 h-40 object-contain mb-4">
+          <img src="/laravel.png" alt="Laravel" srcset="" class="w-40 h-40 object-contain mb-4">
           <h2 class="title-font font-medium text-3xl text-gray-900">Laravel</h2>
         </div>
       </div>
       <div class="p-4 md:w-1/4 sm:w-1/2 w-full">
         <div class="h-64 w-full flex flex-col items-center justify-center border-2 border-gray-600 p-4 rounded-lg transform transition duration-500 hover:scale-105 bg-white">
-          <img src="/flutter.png" alt="" srcset="" class="w-40 h-40 object-contain mb-4">
+          <img src="/flutter.png" alt="Flutter" srcset="" class="w-40 h-40 object-contain mb-4">
           <h2 class="title-font font-medium text-3xl text-gray-900">Flutter</h2>
         </div>
       </div>
       <div class="p-4 md:w-1/4 sm:w-1/2 w-full">
         <div class="h-64 w-full flex flex-col items-center justify-center border-2 border-gray-600 p-4 rounded-lg transform transition duration-500 hover:scale-105 bg-white">
-          <img src="/git.png" alt="" srcset="" class="w-40 h-40 object-contain mb-4">
+          <img src="/git.png" alt="Git" srcset="" class="w-40 h-40 object-contain mb-4">
           <h2 class="title-font font-medium text-3xl text-gray-900">Git</h2>
         </div>
       </div>
