--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,7 +5,7 @@ export let title = "About Me";
 <div class="sm:flex items-center max-w-screen-xl" id="about">
   <div class="sm:w-1/2 p-10">
     <div class="image object-center text-center">
-      <img src="https://i.imgur.com/WbQnbas.png" />
+      <img src="/haykal.png" alt="Muhammad Haykal" width="400"/>
     </div>
   </div>
   <div class="sm:w-1/2 p-5">
